jitfailure-dolfin_expression_2ba8fd39e8d8c30246ad07187417469f/error.log
/tmp/tmp8js9k7_t/dolfin_expression_2ba8fd39e8d8c30246ad07187417469f.cpp: In member function ‘virtual void dolfin::dolfin_expression_2ba8fd39e8d8c30246ad07187417469f::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp8js9k7_t/dolfin_expression_2ba8fd39e8d8c30246ad07187417469f.cpp:67:39: error: ‘gammaDot’ was not declared in this scope
           values[0] = (1 - exp(-eta0*(gammaDot)/tauY_t))*                                         (tauY_t/(gammaDot+eps) +                                         K*(pow((abs(gammaDot)+eps),nPow)/(gammaDot+eps)))                                         + etaInf;
                                       ^~~~~~~~
/tmp/tmp8js9k7_t/dolfin_expression_2ba8fd39e8d8c30246ad07187417469f.cpp:67:39: note: suggested alternative: ‘gammal’
           values[0] = (1 - exp(-eta0*(gammaDot)/tauY_t))*                                         (tauY_t/(gammaDot+eps) +                                         K*(pow((abs(gammaDot)+eps),nPow)/(gammaDot+eps)))                                         + etaInf;
                                       ^~~~~~~~
                                       gammal
/tmp/tmp8js9k7_t/dolfin_expression_2ba8fd39e8d8c30246ad07187417469f.cpp:67:49: error: ‘tauY_t’ was not declared in this scope
           values[0] = (1 - exp(-eta0*(gammaDot)/tauY_t))*                                         (tauY_t/(gammaDot+eps) +                                         K*(pow((abs(gammaDot)+eps),nPow)/(gammaDot+eps)))                                         + etaInf;
                                                 ^~~~~~
/tmp/tmp8js9k7_t/dolfin_expression_2ba8fd39e8d8c30246ad07187417469f.cpp:67:49: note: suggested alternative: ‘time_t’
           values[0] = (1 - exp(-eta0*(gammaDot)/tauY_t))*                                         (tauY_t/(gammaDot+eps) +                                         K*(pow((abs(gammaDot)+eps),nPow)/(gammaDot+eps)))                                         + etaInf;
                                                 ^~~~~~
                                                 time_t
/tmp/tmp8js9k7_t/dolfin_expression_2ba8fd39e8d8c30246ad07187417469f.cpp: In member function ‘virtual double dolfin::dolfin_expression_2ba8fd39e8d8c30246ad07187417469f::get_property(std::__cxx11::string) const’:
/tmp/tmp8js9k7_t/dolfin_expression_2ba8fd39e8d8c30246ad07187417469f.cpp:79:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "etaInf") return etaInf;          if (name == "eta0") return eta0;          if (name == "K") return K;          if (name == "nPow") return nPow;          if (name == "ts") return ts;          if (name == "eps") return eps;
           ^~
/tmp/tmp8js9k7_t/dolfin_expression_2ba8fd39e8d8c30246ad07187417469f.cpp:79:57: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "etaInf") return etaInf;          if (name == "eta0") return eta0;          if (name == "K") return K;          if (name == "nPow") return nPow;          if (name == "ts") return ts;          if (name == "eps") return eps;
                                                         ^~
